<?xml version="1.0" encoding="UTF-8"?>
<!--
     SPDX-FileCopyrightText: 2014-2016 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017-2018,2020-2022 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lineage="http://schemas.android.com/apk/res-auto"
    android:key="system_ui_tuner_settings"
    android:title="@string/system_ui_tuner_title">

    <PreferenceCategory
        android:key="navigation_bar_category"
        android:title="@string/navigation_bar_category" >

        <SwitchPreference
            android:key="enable_taskbar"
            android:title="@string/navigation_bar_enable_taskbar_title" />

        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="navigation_bar_menu_arrow_keys"
            android:title="@string/navigation_bar_arrow_keys_title"
            android:summary="@string/navigation_bar_arrow_keys_summary"
            android:defaultValue="false" />

        <lineageos.preference.SecureSettingSwitchPreference
            android:key="sysui_nav_bar_inverse"
            android:title="@string/navigation_bar_invert_layout_title"
            android:summary="@string/navigation_bar_invert_layout_summary"
            android:defaultValue="false" />

        <lineageos.preference.SecureSettingListPreference
            android:key="navbar_layout_views"
            android:title="@string/navbar_layout_title"
            android:summary="%s"
            android:entries="@array/navbar_layout_entries"
            android:entryValues="@array/navbar_layout_values"
            android:defaultValue="default" />

        <ListPreference
            android:key="navigation_back_long_press"
            android:dialogTitle="@string/navigation_bar_back_long_press_title"
            android:title="@string/navigation_bar_back_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="navigation_home_long_press"
            android:dialogTitle="@string/navigation_bar_home_long_press_title"
            android:title="@string/navigation_bar_home_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="navigation_home_double_tap"
            android:dialogTitle="@string/navigation_bar_home_double_tap_title"
            android:title="@string/navigation_bar_home_double_tap_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="navigation_app_switch_long_press"
            android:dialogTitle="@string/navigation_bar_app_switch_long_press_title"
            android:title="@string/navigation_bar_app_switch_long_press_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

        <ListPreference
            android:key="navigation_bar_edge_long_swipe"
            android:dialogTitle="@string/navigation_bar_edge_long_swipe_title"
            android:title="@string/navigation_bar_edge_long_swipe_title"
            android:entries="@array/hardware_keys_action_entries"
            android:entryValues="@array/hardware_keys_action_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_icons_title">

        <Preference
            android:key="status_bar_icons"
            android:title="@string/status_bar_system_icons_title"
            android:summary="@string/status_bar_system_icons_summary">
            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="status_bar_clock_key"
        android:title="@string/status_bar_clock_title">

        <lineageos.preference.LineageSystemSettingListPreference
            android:key="status_bar_clock"
            android:title="@string/status_bar_clock_position_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_clock_position_title"
            android:entries="@array/status_bar_clock_position_entries"
            android:entryValues="@array/status_bar_clock_position_values"
            android:defaultValue="0" />

        <lineageos.preference.SecureSettingSwitchPreference
            android:key="clock_seconds"
            android:title="@string/status_bar_clock_show_seconds_title"
            android:summary="@string/status_bar_clock_show_seconds_summary"
            android:defaultValue="false" />

        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="status_bar_clock_auto_hide"
            android:title="@string/status_bar_clock_auto_hide_title"
            android:summary="@string/status_bar_clock_auto_hide_summary"
            android:defaultValue="false" />

        <lineageos.preference.LineageSystemSettingListPreference
            android:key="status_bar_am_pm"
            android:title="@string/status_bar_am_pm_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_am_pm_title"
            android:entries="@array/status_bar_am_pm_entries"
            android:entryValues="@array/status_bar_am_pm_values"
            android:defaultValue="2" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="status_bar_battery_key"
        android:title="@string/status_bar_battery_title">

        <lineageos.preference.LineageSystemSettingListPreference
            android:key="status_bar_battery_style"
            android:title="@string/status_bar_battery_style_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_style_title"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:defaultValue="0" />

        <lineageos.preference.LineageSystemSettingListPreference
            android:key="status_bar_show_battery_percent"
            android:title="@string/status_bar_battery_percentage_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_percentage_title"
            android:entries="@array/status_bar_battery_percentage_entries"
            android:entryValues="@array/status_bar_battery_percentage_values"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_brightness_category">

        <lineageos.preference.LineageSecureSettingSwitchPreference
            android:key="qs_show_brightness_slider"
            android:title="@string/status_bar_brightness_slider_title"
            android:summary="@string/status_bar_brightness_slider_summary"
            android:defaultValue="true" />

        <lineageos.preference.LineageSecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/status_bar_brightness_slider_auto_title"
            android:summary="@string/status_bar_brightness_slider_auto_summary"
            android:dependency="qs_show_brightness_slider"
            lineage:requiresConfig="@*android:bool/config_automatic_brightness_available"
            android:defaultValue="true" />

        <!--
        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />
        -->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_quick_settings_category">

        <lineageos.preference.LineageSystemSettingListPreference
            android:key="qs_quick_pulldown"
            android:title="@string/status_bar_quick_qs_pulldown_title"
            android:entries="@array/status_bar_quick_qs_pulldown_entries"
            android:entryValues="@array/status_bar_quick_qs_pulldown_values"
            android:defaultValue="0" />

    </PreferenceCategory>

</PreferenceScreen>
